Java 8 doesn't support PermSize args.